--- a/index.html
+++ b/index.html
@@ -63,19 +63,14 @@
                 <section class="glass rounded-3xl p-8 space-y-4">
                     <div class="flex justify-between items-end">
                         <div>
-                            <h2 class="text-2xl font-bold text-sky-400">資安技能樹</h2>
-                            <!-- <p class="text-slate-400">具備跨平台系統管理與網路安全防護之核心能力</p> -->
+                            <h2 class="text-2xl font-bold text-sky-400">Skill Tree</h2>
                         </div>
-                        <!-- <div class="text-right hidden md:block text-xs text-slate-500">
-                            Last Updated: 2026.01
-                        </div> -->
+
                     </div>
 
                     <!-- Layer 3 -->
                     <div class="bg-slate-900/50 rounded-2xl p-4 border border-dashed border-slate-700">
-                        <!-- <h4 class="text-sm font-bold text-slate-500 mb-4 uppercase tracking-widest flex items-center">
-                            正在努力取得中的專業認證 (In Progress)
-                        </h4> -->
+
                         <div class="flex gap-4 opacity-60">
                             <div
                                 class="px-4 py-2 bg-slate-800 rounded-lg text-sm border border-slate-700 text-slate-400">
@@ -91,23 +86,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-4 border-slate-700">
-                            <div
-                                class="px-4 py-2 bg-slate-800 rounded-lg text-sm border border-slate-700 text-slate-400">
-                                <img src="../cybersecurity\certification\OIP2.webp" alt="CND"
-                                class="w-24 h-24 mb-4 group-hover:scale-110 transition-transform">                            
-                                EC-Council CND (Network Defense)</div>
-
-                        <a href="https://www.credly.com/badges/fd328694-95b3-4ad4-aa22-2c5d9bdc6c16/public_url"
-                            target="_blank"
-                            class="group glass bg-slate-800/50 p-6 rounded-2xl hover:border-sky-500 transition-all duration-300 flex flex-col items-center">
-                            <img src="../cybersecurity\certification\OIP.webp" alt="Cisco"
-                                class="w-24 h-24 mb-4 group-hover:scale-110 transition-transform">
-                            <h3 class="font-bold text-sky-400 text-center">EC-Council</h3>
-                            <p class="text-xs text-slate-100 mt-2 text-center">CEH</p>
-                            <p class="text-sm text-slate-400 mt-1">2026-01-30</p>                            
-                        </a>
-                    </div> -->
 
                     <!-- Layer 2 -->
                     <div class="flex justify-center">
@@ -159,6 +137,8 @@
                         </a>
                     </div>
                 </section>
+
+                <!-- Github Project -->
                 <section class="glass rounded-3xl p-3">
                     <h2 class="text-2xl font-bold mb-3">GitHub Projects</h2>
 
@@ -412,20 +392,27 @@
                     });
                 </script>
                 <section class="glass rounded-3xl p-6">
-                    <h2 class="text-xl font-bold mb-6 flex items-center"><i
-                            class="fas fa-history mr-3 text-sky-400"></i>經歷軌跡</h2>
+                    <h2 class="text-xl font-bold mb-8 flex items-center">
+                        <i class="fas fa-history mr-3 text-sky-400"></i>經歷軌跡
+                    </h2>
+
                     <div
-                        class="space-y-8 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:mx-auto md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-transparent before:via-slate-500 before:to-transparent">
+                        class="space-y-8 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:mx-auto md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-sky-500 via-slate-500 to-transparent">
 
                         <div
                             class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group is-active">
                             <div
-                                class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-500 bg-slate-800 text-slate-300 group-[.is-active]:bg-sky-500 group-[.is-active]:text-white z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2">
-                                <i class="fas fa-video"></i>
+                                class="flex items-center justify-center w-10 h-10 rounded-full border border-sky-400 bg-slate-900 text-sky-400 group-[.is-active]:bg-sky-500 group-[.is-active]:text-white z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2 shadow-[0_0_15px_rgba(56,189,248,0.5)]">
+                                <i class="fas fa-user-shield"></i>
                             </div>
-                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-4 rounded-xl glass">
-                                <h3 class="font-bold">自由創作者時期</h3>
-                                <p class="text-sm text-slate-400">精通 Adobe 系列，開發多媒體自動化腳本工具。</p>
+                            <div
+                                class="w-[calc(100%-4rem)] md:w-[45%] p-5 rounded-xl glass hover:border-sky-500/50 transition-colors">
+                                <time class="text-xs font-bold text-sky-400">2025 - Present</time>
+                                <h3 class="font-bold text-lg mt-1">資安轉型時期</h3>
+                                <ul class="text-sm text-slate-300 mt-2 list-disc list-inside space-y-1">
+                                    <li>積極提升自我實力，專注於威脅防禦與調查鑑識</li>
+                                    <li>目標協助台灣企業應對資安威脅，保護數位資產安全</li>
+                                </ul>
                             </div>
                         </div>
 
@@ -433,20 +420,125 @@
                             class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group">
                             <div
                                 class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-500 bg-slate-800 text-slate-300 z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2">
-                                <i class="fas fa-user-shield"></i>
+                                <i class="fas fa-video"></i>
                             </div>
-                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-4 rounded-xl glass">
-                                <h3 class="font-bold">教育替代役</h3>
-                                <p class="text-sm text-slate-400">負責教育部專案開發，維護全校資訊設備與外籍生指導。</p>
+                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-5 rounded-xl glass">
+                                <time class="text-xs font-bold text-slate-400">2019 - 2025</time>
+                                <h3 class="font-bold text-lg mt-1">自由創作者時期</h3>
+                                <ul class="text-sm text-slate-300 mt-2 list-disc list-inside space-y-1">
+                                    <li>精通 Adobe 系列工具進行高質量影像創作</li>
+                                    <li>自主開發並發布多項開源剪輯自動化程式工具</li>
+                                </ul>
                             </div>
                         </div>
+
+                        <div
+                            class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group">
+                            <div
+                                class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-500 bg-slate-800 text-slate-300 z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2">
+                                <i class="fas fa-school"></i>
+                            </div>
+                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-5 rounded-xl glass">
+                                <time class="text-xs font-bold text-slate-400">2018 - 2019</time>
+                                <h3 class="font-bold text-lg mt-1">教育替代役</h3>
+                                <ul class="text-sm text-slate-300 mt-2 list-disc list-inside space-y-1">
+                                    <li>開發教育部委託專案，系統應用於全台多所學校</li>
+                                    <li>維護全校資訊設備、負責網頁開發與外籍生導師</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div
+                            class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group">
+                            <div
+                                class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-500 bg-slate-800 text-slate-300 z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2">
+                                <i class="fas fa-microchip"></i>
+                            </div>
+                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-5 rounded-xl glass">
+                                <time class="text-xs font-bold text-slate-400">2015 - 2017</time>
+                                <h3 class="font-bold text-lg mt-1">資訊工程研究所</h3>
+                                <ul class="text-sm text-slate-300 mt-2 list-disc list-inside space-y-1">
+                                    <li>於 IEEE、AAAI、CVPR 等頂尖研討會發表期刊論文</li>
+                                    <li>參與多次海內外學術交流，深耕電腦視覺研究</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div
+                            class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group">
+                            <div
+                                class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-500 bg-slate-800 text-slate-300 z-10 shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                            <div class="w-[calc(100%-4rem)] md:w-[45%] p-5 rounded-xl glass">
+                                <time class="text-xs font-bold text-slate-400">2011 - 2015</time>
+                                <h3 class="font-bold text-lg mt-1">資訊工程學士班</h3>
+                                <ul class="text-sm text-slate-300 mt-2 list-disc list-inside space-y-1">
+                                    <li>學業優異獲清華大學資工所逕行錄取</li>
+                                    <li>熱舞、吉他、攝影多項社團經驗，具豐富活動策劃力</li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                 </section>
             </div>
 
             <!-- Right Column -->
             <div class="space-y-6">
+                <section class="glass rounded-3xl p-4">
+                    <h2 class="text-xl font-bold mb-6 flex items-center gap-3">
+                        <i class="fas fa-share-nodes text-sky-400"></i>
+                        Social Impact
+                    </h2>
+                    <div class="flex justify-around items-center mb-3">
+                        <a href="https://space.bilibili.com/432848464" target="_blank"
+                            class="group flex flex-col items-center gap-2 hover:scale-110 transition-transform">
+                            <div
+                                class="w-10 h-10 flex items-center justify-center rounded-full bg-[#00aeec]/10 text-[#00aeec] group-hover:bg-[#00aeec] group-hover:text-white transition-colors">
+                                <i class="fab fa-bilibili text-xl"></i>
+                            </div>
+                        </a>
 
+                        <a href="https://www.youtube.com/@SiNNature" target="_blank"
+                            class="group flex flex-col items-center gap-2 hover:scale-110 transition-transform">
+                            <div
+                                class="w-10 h-10 flex items-center justify-center rounded-full bg-[#ff0000]/10 text-[#ff0000] group-hover:bg-[#ff0000] group-hover:text-white transition-colors">
+                                <i class="fab fa-youtube text-xl"></i>
+                            </div>
+                        </a>
+
+                        <a href="tiktok.com/@sinnature" target="_blank"
+                            class="group flex flex-col items-center gap-2 hover:scale-110 transition-transform">
+                            <div
+                                class="w-10 h-10 flex items-center justify-center rounded-full bg-slate-700/50 text-white group-hover:bg-black transition-colors">
+                                <i class="fab fa-tiktok text-xl"></i>
+                            </div>
+                        </a>
+
+                        <a href="https://www.douyin.com/user/MS4wLjABAAAA-nMs1S7GpmHlDc0U7qDdABpFB70Cr07_LEcYH2ELIc4"
+                            target="_blank"
+                            class="group flex flex-col items-center gap-2 hover:scale-110 transition-transform">
+                            <div
+                                class="w-10 h-10 flex items-center justify-center rounded-full bg-slate-700/50 text-white group-hover:bg-[#fe2c55] transition-colors">
+                                <i class="fas fa-music text-xl"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4 text-center">
+
+                        <div class="p-3 bg-white/5 rounded-2xl border border-white/10 shadow-sm">
+                            <p class="text-[10px] text-slate-400 uppercase tracking-wider mb-1">總播放量</p>
+                            <p class="text-xl font-bold text-white">800K+</p>
+                        </div>
+                        <div class="p-3 bg-white/5 rounded-2xl border border-white/10 shadow-sm">
+                            <p class="text-[10px] text-slate-400 uppercase tracking-wider mb-1">獲讚總數</p>
+                            <p class="text-xl font-bold text-white">100K+</p>
+                        </div>
+                    </div>
+
+
+                </section>
                 <!-- Google Scholar -->
                 <section class="glass rounded-3xl p-6">
                     <div class="flex justify-between items-center mb-1">
@@ -490,7 +582,7 @@
                         </div>
                     </div>
 
-                    <div class="flex items-end justify-between h-24 gap-1 px-2">
+                    <div class="flex items-end justify-between h-32 gap-1 px-2">
                         <!-- <div class="w-full bg-sky-500/40 rounded-t-sm hover:bg-sky-400 transition-all cursor-help" style="height: 10%" title="2017: 4"></div>
         <div class="w-full bg-sky-500/40 rounded-t-sm hover:bg-sky-400 transition-all cursor-help" style="height: 30%" title="2018: 20"></div> --->
                         <div class="w-full bg-sky-500/40 rounded-t-sm hover:bg-sky-400 transition-all cursor-help"
@@ -516,7 +608,43 @@
                         <span>2026</span>
                     </div>
                 </section>
+                <!-- Certifications -->
+                <section class="glass rounded-3xl">
+                    <h2 class="text-xl font-bold m-6 flex items-center gap-3">
+                        Certifications
+                    </h2>
 
+                    <div class="flex flex-col items-center space-y-6">
+
+                        <a href="src/certification/comptia/CompTIA Security+ ce certificate.pdf" target="_blank"
+                            class="block w-4/5 transition-all duration-100 transform hover:scale-105 hover:shadow-[0_0_25px_rgba(56,189,248,0.4)]">
+                            <img src="src/certification/comptia/cert-snapshot.png" alt="Security+"
+                                class="w-full h-auto object-contain rounded-lg">
+                        </a>
+
+                        <a href="src/certification/redhat/ProfessionalCertificationDigitalCredentials20260206-30-lbei6g.pdf"
+                            target="_blank"
+                            class="block w-4/5 transition-all duration-100 transform hover:scale-105 hover:shadow-[0_0_25px_rgba(56,189,248,0.4)]">
+                            <img src="src/certification/redhat/cert-snapshot.png" alt="Redhat Linux"
+                                class="w-full h-auto object-contain rounded-lg">
+                        </a>
+
+                        <a href="src/certification/cisco/NetworkSupportandSecurityUpdate20260206-31-pnzjio.pdf"
+                            target="_blank"
+                            class="block w-4/5 transition-all duration-100 transform hover:scale-105 hover:shadow-[0_0_25px_rgba(56,189,248,0.4)]">
+                            <img src="src/certification/cisco/cert-snapshot.png" alt="Cisco Network"
+                                class="w-full h-auto object-contain rounded-lg">
+                        </a>
+
+                        <a href="src/certification/microsoft/Credentials - sinnature _ Microsoft Learn.pdf"
+                            target="_blank"
+                            class="block w-4/5 transition-all duration-100 transform hover:scale-105 hover:shadow-[0_0_25px_rgba(56,189,248,0.4)]">
+                            <img src="src/certification/microsoft/cert-snapshot.png" alt="Microsoft AD"
+                                class="w-full h-auto object-contain rounded-lg">
+                        </a>
+
+                    </div>
+                </section>
                 <!-- Education -->
                 <section class="glass rounded-3xl p-6">
                     <h2 class="text-xl font-bold mb-4">Education</h2>
@@ -547,27 +675,6 @@
                                 <p class="text-xs text-slate-400">2011 - 2015</p>
                             </div>
                         </div>
-                </section>
-
-                <section class="glass rounded-3xl p-6">
-                    <h2 class="text-xl font-bold mb-4">學術成就</h2>
-                    <div class="space-y-3">
-                        <div class="p-3 bg-slate-800/50 rounded-lg text-sm border-l-4 border-sky-400">
-                            <strong>IEEE / AAAI / CVPR</strong>
-                            <p class="text-slate-400 mt-1">發表多篇電腦視覺與深度學習論文</p>
-                        </div>
-                        <p class="text-xs text-slate-400 italic">參與多次國際研討會進行學術發表與技術交流。</p>
-                    </div>
-                </section>
-
-                <section class="glass rounded-3xl p-6">
-                    <h2 class="text-xl font-bold mb-2">多元特質</h2>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="text-xs bg-slate-700 px-2 py-1 rounded">熱舞社表演</span>
-                        <span class="text-xs bg-slate-700 px-2 py-1 rounded">吉他社</span>
-                        <span class="text-xs bg-slate-700 px-2 py-1 rounded">活動企劃</span>
-                        <span class="text-xs bg-slate-700 px-2 py-1 rounded">攝影</span>
-                    </div>
                 </section>
             </div>
         </div>
