--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡瑞霆 Jui-Ting Chien | Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- <script src="lib/tailwindcss.devtools"></script>
-    <link rel="stylesheet" href="lib/cdnjs-all.min.css"> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> -->
+    <script src="lib/tailwindcss.devtools"></script>
+    <link rel="stylesheet" href="lib/cdnjs-all.min.css">
     <style>
         body {
             background-color: #0f172a;
@@ -54,6 +54,46 @@
                 <a href="https://sinnature.github.io/" class="glass p-3 rounded-xl hover:bg-slate-700 transition"><i
                         class="fas fa-globe text-2xl"></i></a>
             </div>
+                    <h2 class="text-2xl font-bold mb-3">GitHub Projects</h2>
+
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-1">
+
+                        <a href="https://github.com/cyberpeacemaker" target="_blank"
+                            class="group flex flex-col items-center text-center p-1 rounded-2xl hover:bg-white/10 transition-all">
+                            <div
+                                class="w-16 h-16 bg-white rounded-full flex items-center justify-center mb-3 shadow-lg overflow-hidden group-hover:scale-110 transition-transform">
+                                <img src="src/github/cyberpeacemaker.png" alt="GitHub Icon"
+                                    class="w-full h-full object-contain">
+                            </div>
+                            <span class="font-bold text-slate-100">Inforesic</span>
+                            <p class="text-xs text-slate-400 mt-1">Cyber security and forensic.</p>
+                        </a>
+
+                        <a href="https://ydnaandy123.github.io/" target="_blank"
+                            class="group flex flex-col items-center text-center p-1 rounded-2xl hover:bg-white/10 transition-all">
+                            <div
+                                class="w-16 h-16 bg-white rounded-full flex items-center justify-center mb-3 shadow-lg overflow-hidden group-hover:scale-110 transition-transform">
+                                <img src="src/github/juitingchien.png" alt="GitHub Icon"
+                                    class="w-full h-full object-contain">
+                            </div>
+                            <span class="font-bold text-slate-100">Jui-Ting Chien</span>
+                            <p class="text-xs text-slate-400 mt-1">AI & CV</p>
+                        </a>
+
+                        <a href="https://github.com/SiNNature" target="_blank"
+                            class="group flex flex-col items-center text-center p-1 rounded-2xl hover:bg-white/10 transition-all">
+                            <div
+                                class="w-16 h-16 bg-white rounded-full flex items-center justify-center mb-3 shadow-lg overflow-hidden group-hover:scale-110 transition-transform">
+                                <img src="src/github/sinnature.png" alt="GitHub Icon"
+                                    class="w-full h-full object-contain">
+                            </div>
+                            <span class="font-bold text-slate-100"></span>SiNNature</span>
+                            <p class="text-xs text-slate-400 mt-1">Multimedia creation & tool.</p>
+                        </a>
+
+                    </div>            
+            <!--  -->
+            假設想阻止戰爭需要填滿一個量表，就算一個人沒辦法集滿全部，但大家都盡己所能的付出自己那一份，這個量表就很有可能填滿
         </header>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -70,6 +110,7 @@
                     </div>
 
                     <!-- Layer 3 -->
+                    紅 藍
                     <div class="bg-slate-900/50 rounded-2xl p-4 border border-dashed border-slate-700">
 
                         <div class="flex gap-4 opacity-60">
@@ -89,6 +130,7 @@
                     </div>
 
                     <!-- Layer 2 -->
+                     美國國防部要求 資安通識概念
                     <div class="flex justify-center">
                         <a href="https://www.credly.com/badges/c4af8a3c-3228-4592-a700-c9e5cc5ffc2b/public_url"
                             target="_blank"
@@ -106,6 +148,7 @@
                     </div>
 
                     <!-- Layer 1 -->
+                     品牌認證 部屬、管理與疑難排解
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
                         <a href="https://learn.microsoft.com/api/credentials/share/en-us/sinnature/4481221B01AA7BCB"
                             target="_blank"
@@ -150,7 +193,7 @@
                         class="glass bg-slate-800/30 p-6 rounded-2xl border-l-4 border-amber-500 hover:bg-slate-800/50 transition group">
                         <div class="flex flex-wrap gap-2 mb-3">
                             <span
-                                class="bg-amber-500/20 text-amber-300 text-[10px] font-bold px-2 py-0.5 rounded border border-amber-500/30 uppercase tracking-wider">
+                                class="bg-amber-500/20 text-amber-300 text-sm font-bold px-2 py-0.5 rounded border border-amber-500/30 uppercase tracking-wider">
                                 AAAI 2019
                             </span>
                         </div>
@@ -160,9 +203,9 @@
                                 via Imitating Visual Effects</a>
                         </h3>
 
-                        <div class="flex items-start gap-2 mb-3">
+                        <div class="flex items-start gap-2">
                             <p class="text-sm text-slate-400">
-                                Ding-Jie Chen, <span class="underline decoration-amber-500/50">Jui-Ting Chien</span>,
+                                Ding-Jie Chen, Jui-Ting Chien,
                                 Hwann-Tzong Chen, Tyng-Luh Liu
                             </p>
                         </div>
@@ -172,7 +215,7 @@
                         class="glass bg-slate-800/30 p-6 rounded-2xl border-l-4 border-indigo-500 hover:bg-slate-800/50 transition group">
                         <div class="flex flex-wrap gap-2 mb-3">
                             <span
-                                class="bg-indigo-500/20 text-indigo-300 text-[10px] font-bold px-2 py-0.5 rounded border border-indigo-500/30 uppercase tracking-wider">
+                                class="bg-indigo-500/20 text-indigo-300 text-sm font-bold px-2 py-0.5 rounded border border-indigo-500/30 uppercase tracking-wider">
                                 AAAI 2018
                             </span>
                         </div>
@@ -181,9 +224,9 @@
                             <a href="#" class="hover:underline">Tap and Shoot Segmentation</a>
                         </h3>
 
-                        <div class="flex items-start gap-2 mb-3">
+                        <div class="flex items-start gap-2">
                             <p class="text-sm text-slate-400">
-                                Ding-Jie Chen, <span class="underline decoration-indigo-500/50">Jui-Ting Chien</span>,
+                                Ding-Jie Chen, Jui-Ting Chien,
                                 Hwann-Tzong Chen, Long-Wen Chang
                             </p>
                         </div>
@@ -193,7 +236,7 @@
                         class="glass bg-slate-800/30 p-6 rounded-2xl border-l-4 border-sky-500 hover:bg-slate-800/50 transition group">
                         <div class="flex flex-wrap gap-2 mb-3">
                             <span
-                                class="bg-sky-500/20 text-sky-300 text-[10px] font-bold px-2 py-0.5 rounded border border-sky-500/30 uppercase tracking-wider">
+                                class="bg-sky-500/20 text-sky-300 text-sm font-bold px-2 py-0.5 rounded border border-sky-500/30 uppercase tracking-wider">
                                 APSIPA ASC 2018
                             </span>
                         </div>
@@ -202,10 +245,9 @@
                             <a href="#" class="hover:underline">Self Adversarial Training for Human Pose Estimation</a>
                         </h3>
 
-                        <div class="flex items-start gap-2 mb-3">
+                        <div class="flex items-start gap-2">
                             <p class="text-sm text-slate-400">
-                                Chia-Jung Chou, <span class="underline decoration-sky-500/50">Jui-Ting Chien</span>,
-                                Hwann-Tzong Chen
+                                Chia-Jung Chou, Jui-Ting Chien, Hwann-Tzong Chen
                             </p>
                         </div>
                     </div>
@@ -214,7 +256,7 @@
                         class="glass bg-slate-800/30 p-6 rounded-2xl border-l-4 border-emerald-500 hover:bg-slate-800/50 transition group">
                         <div class="flex flex-wrap gap-2 mb-3">
                             <span
-                                class="bg-emerald-500/20 text-emerald-300 text-[10px] font-bold px-2 py-0.5 rounded border border-emerald-500/30 uppercase tracking-wider">
+                                class="bg-emerald-500/20 text-emerald-300 text-sm font-bold px-2 py-0.5 rounded border border-emerald-500/30 uppercase tracking-wider">
                                 ICCV Workshop 2017
                             </span>
                         </div>
@@ -223,9 +265,9 @@
                             <a href="#" class="hover:underline">Detecting Nonexistent Pedestrians</a>
                         </h3>
 
-                        <div class="flex items-start gap-2 mb-3">
+                        <div class="flex items-start gap-2">
                             <p class="text-sm text-slate-400">
-                                <span class="underline decoration-emerald-500/50">Jui-Ting Chien</span>, Chia-Jung Chou,
+                                Jui-Ting Chien, Chia-Jung Chou,
                                 Ding-Jie Chen, Hwann-Tzong Chen
                             </p>
                         </div>
@@ -235,7 +277,7 @@
                         class="glass bg-slate-800/30 p-6 rounded-2xl border-l-4 border-rose-500 hover:bg-slate-800/50 transition group">
                         <div class="flex flex-wrap gap-2 mb-3">
                             <span
-                                class="bg-rose-500/20 text-rose-300 text-[10px] font-bold px-2 py-0.5 rounded border border-rose-500/30 uppercase tracking-wider">
+                                class="bg-rose-500/20 text-rose-300 text-sm font-bold px-2 py-0.5 rounded border border-rose-500/30 uppercase tracking-wider">
                                 ECCV 2016
                             </span>
                         </div>
@@ -245,9 +287,9 @@
                                 from Dashcam Videos in the Wild</a>
                         </h3>
 
-                        <div class="flex items-start gap-2 mb-3">
+                        <div class="flex items-start gap-2">
                             <p class="text-sm text-slate-400">
-                                Shao-Pin Chang, <span class="underline decoration-rose-500/50">Jui-Ting Chien</span>,
+                                Shao-Pin Chang, Jui-Ting Chien,
                                 Fu-En Wang, Shang-Da Yang, Hwann-Tzong Chen, Min Sun
                             </p>
                         </div>
@@ -255,7 +297,7 @@
                 </section>
 
                 <!-- Github Project -->
-                <section class="glass rounded-3xl p-3">
+                <!-- <section class="glass rounded-3xl p-3">
                     <h2 class="text-2xl font-bold mb-3">GitHub Projects</h2>
 
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-1">
@@ -294,7 +336,7 @@
                         </a>
 
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Creator -->
                 <section class="glass rounded-3xl px-4 py-6 w-full">
@@ -331,7 +373,7 @@
                                     class="absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0 group-hover:opacity-100"
                                     src="你的影片2.mp4" loop muted playsinline preload="none">
                                 </video>
-                                <img src="src/creator/mv-2.png" alt="作品2"
+                                <img src="src/creator/mv-3.png" alt="作品2"
                                     class="absolute inset-0 w-full h-full object-cover group-hover:opacity-0 transition-opacity duration-300">
                                 <div
                                     class="absolute inset-0 flex items-center justify-center bg-black/40 text-white opacity-100 group-hover:opacity-0 transition-opacity">
@@ -452,7 +494,7 @@
             </div>
 
             <!-- Right Column -->
-            <div class="space-y-6">
+            <div class="space-y-4">
                 <!-- Education -->
                 <section class="glass rounded-3xl p-4">
                     <h2 class="text-xl font-bold mb-4">Education</h2>
@@ -485,8 +527,8 @@
                         </div>
                 </section>                
                 <!-- Certifications -->
-                <section class="glass rounded-3xl">
-                    <h2 class="text-xl font-bold m-6 flex items-center gap-3">
+                <section class="glass rounded-3xl pb-4">
+                    <h2 class="text-xl font-bold m-4 flex items-center gap-3">
                         Certifications
                     </h2>
 
@@ -525,7 +567,7 @@
                 <section class="glass rounded-3xl p-6">
                     <div class="flex justify-between items-center mb-1">
                         <div>
-                            <h2 class="text-base font-bold text-white mb-2">Google Scholar</h2>
+                            <h2 class="text-xl font-bold mb-2 flex items-center">Google Scholar</h2>
                             <p class="text-[10px] text-slate-400 uppercase tracking-wider">Cited by</p>
                         </div>
 
@@ -594,7 +636,7 @@
                 <section class="glass rounded-3xl p-4">
                     <h2 class="text-xl font-bold mb-6 flex items-center gap-3">
                         <i class="fas fa-share-nodes text-sky-400"></i>
-                        Social Impact
+                        頻道經營
                     </h2>
                     <div class="flex justify-around items-center mb-3">
                         <a href="https://space.bilibili.com/432848464" target="_blank"
@@ -663,8 +705,8 @@
                                     Present</time>
                                 <h3 class="font-bold text-base text-slate-100">資安轉型時期</h3>
                                 <ul class="text-xs text-slate-400 mt-2 space-y-1 list-disc list-inside">
-                                    <li>專注威脅防禦與調查鑑識</li>
-                                    <li>協助企業應對資安威脅</li>
+                                    <li>真實資安事件鑑識調查經驗</li>
+                                    <li>以協助企業應對資安威脅為使命</li>
                                 </ul>
                             </div>
                         </div>
@@ -679,8 +721,8 @@
                                     2025</time>
                                 <h3 class="font-bold text-base text-slate-100">自由創作者</h3>
                                 <ul class="text-xs text-slate-400 mt-2 space-y-1 list-disc list-inside">
-                                    <li>精通 Adobe 系列影像創作</li>
-                                    <li>發布多項開源自動化工具</li>
+                                    <li>熟練 Adobe 家族各式工具</li>
+                                    <li>開發多項腳本插件整合影片剪輯</li>
                                 </ul>
                             </div>
                         </div>
@@ -694,7 +736,10 @@
                                 <time class="text-[10px] font-bold text-slate-500 uppercase tracking-tighter">2018 -
                                     2019</time>
                                 <h3 class="font-bold text-base text-slate-100">教育替代役</h3>
-                                <p class="text-xs text-slate-400 mt-2">負責教育部專案開發與校內資訊設備維護。</p>
+                                <ul class="text-xs text-slate-400 mt-2 space-y-1 list-disc list-inside">
+                                    <li>協助學校各項資訊、教育等事務</li>
+                                    <li>開發應用程式提供多所學校使用 </li>                                 
+                                </ul>                                
                             </div>
                         </div>
 
@@ -707,7 +752,10 @@
                                 <time class="text-[10px] font-bold text-slate-500 uppercase tracking-tighter">2015 -
                                     2017</time>
                                 <h3 class="font-bold text-base text-slate-100">資訊工程研究所</h3>
-                                <p class="text-xs text-slate-400 mt-2">於 AAAI、CVPR 等頂尖會議發表多篇論文。</p>
+                                <ul class="text-xs text-slate-400 mt-2 space-y-1 list-disc list-inside">
+                                    <li>發表多篇期刊論文於AI、CV頂尖會議</li>
+                                    <li>多次海內外頂尖研討會學術交流報告</li>
+                                </ul>                                
                             </div>
                         </div>
 
@@ -716,11 +764,14 @@
                                 class="flex items-center justify-center w-10 h-10 rounded-full border border-slate-600 bg-slate-800 text-slate-400 z-10 shrink-0">
                                 <i class="fas fa-graduation-cap text-xs"></i>
                             </div>
-                            <div class="flex-1">
+                            <div class="flex-1 pb-4 border-b border-white/5 group-last:border-none">
                                 <time class="text-[10px] font-bold text-slate-500 uppercase tracking-tighter">2011 -
                                     2015</time>
                                 <h3 class="font-bold text-base text-slate-100">資訊工程學士班</h3>
-                                <p class="text-xs text-slate-400 mt-2">學業優異，獲清華大學資工所逕行錄取。</p>
+                                <ul class="text-xs text-slate-400 mt-2 space-y-1 list-disc list-inside">
+                                    <li>豐富社團活動、表演成發和營隊主辦經驗</li>
+                                    <li>學業成績良好，清大資工研究所逕行錄取</li>
+                                </ul>
                             </div>
                         </div>
 
